[package]
name = "penumbra_candlesticks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common dependencies
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.12"
tonic = "0.11.0"
cli-candlestick-chart = "0.4.1"
pbjson-types                     = { version = "0.6.0" }            

[build-dependencies]
tonic-build = "0.11"
prost = "0.12.3"
prost-build = "0.12.3"
prost-types = "0.12"
